# cassandra-project-bd

./: .gitignore  REPORT.md  docker-compose.yml  pyproject.toml  readme.md
admin/: api.py  app.py  pyproject.toml
admin/pages/: 1_Movies.py  2_Cinemas.py  3_Users.py  4_Reservations.py
backend/: database.py  main.py  pyproject.toml  schema.py
backend/src/: database.py  main.py  schema.py
backend/src/database/: proxy.py
stress_test/: test_reservations.py
user/: api.py  app.py  pyproject.toml
user/pages/: 1_Account.py  2_Make_Reservation.py  3_My_Reservations.py
