[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cassandra-driver>=3.30.0",
    "fastapi[standard]>=0.136.1",
    "streamlit>=1.40.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ipython>=8.39.0",
]
